--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "electron-updater": "^6.6.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "simple-rnnoise-wasm": "^1.1.0",
     "socket.io": "^4.6.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "electron": "^27.0.0",
